fix stretched player card on mobile

--- a/client/src/app/player/player.component.css
+++ b/client/src/app/player/player.component.css
@@ -3,17 +3,6 @@
   flex-wrap: wrap;
 }
 
-
-@media (min-width: 800px) {
-  .parent{
-    margin-right: 10%;
-  }
-}
-
-.column {
-  flex: 1;
-}
-
 .player-card{
   justify-content: center;
   display: flex;
@@ -21,8 +10,14 @@
 
 
 @media (min-width: 800px) {
+  .parent{
+    margin-right: 10%;
+  }
   .player-card{
     justify-content: flex-end;
+  }
+  .column {
+    flex: 1;
   }
 }
 
